[package]
name = "crab-doas"
version = "0.0.1"
edition = "2024"

[dependencies]
nix = { version = "0.30", features = ["user", "process", "hostname", "syslog", "fs", "time"] }
pam = "0.8"
rpassword = "7.4"

[profile.release]
codegen-units = 1
strip = "symbols"
lto = "fat"
opt-level = "z"
panic = "abort"
