[package]
name = "crab-doas"
version = "0.0.2"
edition = "2024"

[dependencies]
nix = { version = "0.31.2", features = ["user", "process", "hostname", "syslog", "fs", "time", "term"] }
pam = "0.8"
rpassword = "7.4"

[profile.release]
codegen-units = 1
strip = "symbols"
lto = "fat"
opt-level = "z"
panic = "abort"
